--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>LLM Chat App</title>
+		<title>AuraCraft AI</title>
 		<style>
 			:root {
 				--primary-color: #f6821f;
@@ -144,7 +144,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Cloudflare AI Chat</h1>
+			<h1>AuraCraft AI Chat</h1>
 			<p>Powered by Cloudflare Workers AI</p>
 		</header>
 
