--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<img src="/logo.png" alt="AuraCraft Logo" class="logo" />
+		<link rel="icon" type="image/png" href="logo.png" />
 		<title>AuraCraft AI</title>
 		<style>
 			:root {
